<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.leonherrera.parkingfast.LogginActivity"
    android:background="@color/greenyellow"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/LOGGIN"
        android:layout_gravity="center"
        android:textSize="40dp"
        />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/icono"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eLUser"
        android:hint="@string/User"
        android:gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eLPassword"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:gravity="center"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bLEnter"
        android:hint="@string/ENTER"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tLRegister"
        android:layout_gravity="center"
        android:text="REGISTRARSE"
        android:hint="@string/REGISTER"
        android:textSize="15dp"
        android:textColor="@color/blue"
        />
</LinearLayout>
